<resources>
    <string name="app_name">PersistentTimerApp</string>
    <string name="place_holder_time">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="set_countdown_time">Set Countdown Time</string>
    <string name="hint_hh">HH</string>
    <string name="hint_mm">MM</string>
    <string name="hint_ss">SS</string>
    <string name="time_separator">" : "</string>
    <string name="go_to_timer">Go to Timer</string>
    <string name="pick_a_color">Pick a color:</string>
    <string name="double_tap_to_add_task">Double tap to add task...</string>
    <string name="add_new_category">Add New Category</string>
    <string name="category_name">Category Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_calendar">Go to Calendar</string>
    <string name="delete_category_title">Delete Category</string>
    <string name="delete_category_message">Are you sure you want to delete category \"%1$s\" and all its tasks?</string>
    <string name="delete">Delete</string>
</resources>