<?xml version="1.0" encoding="utf-8"?>
<!-- Root ScrollView for the Timer Activity -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".TimerActivity">

        <!-- Timer Section -->

        <!-- Label for the timer input fields -->
        <TextView
            android:id="@+id/inputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"
            android:text="@string/set_countdown_time"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Preset timer buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/preset25Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="25 min" />

            <Button
                android:id="@+id/preset5Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="5 min" />

            <Button
                android:id="@+id/preset15Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15 min" />

        </LinearLayout>

        <!-- Input fields for HH:MM:SS format -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <!-- Hours input -->
            <EditText
                android:id="@+id/inputHours"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:hint="HH"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- Minutes input -->
            <EditText
                android:id="@+id/inputMinutes"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:hint="MM"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- Seconds input -->
            <EditText
                android:id="@+id/inputSeconds"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:hint="SS"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <!-- Large display for the remaining countdown time -->
        <TextView
            android:id="@+id/timeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:text="00:00:00" />

        <!-- Control buttons for the timer -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <!-- Toggles between starting and stopping/pausing the timer -->
            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/resetButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Resets the timer to 0 and clears input fields -->
            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/startButton"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/calendarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/go_to_calendar"/>
    </LinearLayout>
</ScrollView>
